2008-04-03 Steve Chu <stvchu@gmail.com>
   * New features: 
     - add '-T' option to set database type, 'btree' or 'hash'
     - add '-E' option to enable second database, so we can use 'pvget'
     - new command 'pkget' that you can get items with a key prefix
     - new command 'pvget' that you can get items with a value prefix
   * Changes:
     - add support to memcache.py for 'pkget' and 'pvget' command, see
	 'tools/memcache.py'

2008-03-21 Version 1.0.3 released

2008-03-21 Steve Chu <stvchu@gmail.com>
   * Bugfix: --with-bdb can not find libdb.so and db.h

2008-03-17 Steve Chu <stvchu@gmail.com>
    * add a '-A' option to set page size, and also can get this value from
    'stats bdb'

2008-03-07 Steve Chu <stvchu@gmail.com>
    * new private command 'rep_set_request' available, to set wehther it allows bulk
    transfer and also can get this value from 'stats rep'. See 'doc/replication.txt'
    * mdbtop.py update

2008-03-06 Steve Chu <stvchu@gmail.com>
    * new private command 'rep_set_bulk' available, to set wehther it allows bulk
    transfer and also can get this value from 'stats rep'. See 'doc/replication.txt'

2008-03-05 Steve Chu <stvchu@gmail.com>
    * add 'next_lsn' to 'stats rep' to show master-slave sync status
    * Make the default ack policy 'DB_REPMGR_ACKS_ONE_PEER'
    * upgrade 'mdbtop.py' for better rendering

2008-03-04 Version 1.0.2-beta released
2008-03-03 Steve Chu <stvchu@gmail.com>
    * replication configure changed and improved:
      - Make the default ack policy 'DB_REPMGR_ACKS_ALL_PEERS'
      - Make the default ack timeout 20 millisecond
      - two new private commands 'rep_set_ack_policy' and
        'rep_set_ack_timeout' are available to set ack_policy and ack_timeout,
        and 'stats rep' also includes this two value. See
        'docs/replication.txt'

2008-02-29 Steve Chu <stvchu@gmail.com>
    * give a warning if item buffer size larger than 256KB